--- a/try-quantum-vue/package.json
+++ b/try-quantum-vue/package.json
@@ -15,7 +15,8 @@
   "dependencies": {
     "pinia": "^2.0.36",
     "vue": "^3.3.2",
-    "vue-router": "^4.2.0"
+    "vue-router": "^4.2.0",
+    "vue3-component-library-ts": "0.0.1"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.2.0",
